--- a/index.html
+++ b/index.html
@@ -20,41 +20,33 @@
                 <h1 class="title">Flexbox Row</h1>
                 <p>Use these three properties to create a Flexbox row layout.</p>
                 <pre>
-<code>
-.row {
+<code>.row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-}
-
-</code>
+}</code>
                 </pre>
             </div>
             <div class="box">
                 <h1 class="title">Flexbox Column</h1>
                 <p>Use this to create a Flexbox column layout.</p>
                 <pre>
-<code>
-.column {
+<code>.column {
     display: flex;
     flex-direction: column;
-}
-
-</code>
+}</code>
                 </pre>
             </div>
             <div class="box">
                 <h1 class="title">CSS Grid Layout</h1>
                 <p>Build a 12-column layout using CSS Grid</p>
                 <pre>
-<code>
-.grid {
+<code>.grid {
     display: grid;
     width: 100%; 
     grid-template-columns:
     repeat(12, 1fr)
-}
-</code>
+}</code>
                 </pre>
             </div>
             <div class="box">
@@ -62,23 +54,20 @@
                 <p>This will create a background linear gradient from top to
                     bottom.</p>
                 <pre>
-<code>
-.linear-gradient-background {
+<code>.linear-gradient-background {
     background-image: linear-
 gradient(
     rgba (232,102,236,0.3) 0%;
     rgba (232,102,236,0.6) 100%
   );
-}
-</code>
+}</code>
                 </pre>
             </div>
             <div class="box">
                 <h1 class="title">Box Transition Glow</h1>
                 <p>Use transition and box shadows to glow on hover</p>
                 <pre>
-<code>
-.code-card .card-header {
+<code>.code-card .card-header {
     border-radius: 8px;
     transition: all 0.5s ease-in-
 out;
@@ -89,9 +78,7 @@ out;
    box-shadow: inset 0px 0px 8px
 rgba(232,102,236,1), 0 0 15px
 rbga(232,102,236,1);
-}
-
-</code>
+}</code>
                 </pre>
             </div>
             <div class="box">
@@ -99,13 +86,10 @@ rbga(232,102,236,1);
                 <p>Use position properties and negative margins to raise
                     elements higher than their natural starting point.</p>
                 <pre>
-<code>
-.card-header {
+<code>.card-header {
     position: relative;
     margin-top: -20px;
-}
-
-</code>
+}</code>
                 </pre>
             </div>
         </main>
